# dotfiles

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Migration.md  PLANS.md  README.md  flake.nix  font-blob.xml  outputs.nix  setup-env.sh  wish.md
.git-filters/: clean.sh  common.sh  setup-ci.sh  setup.sh  smudge.sh
apps/: starship.toml
crates/dotfiles-sync-vscode/: Cargo.toml
crates/dotfiles-sync-vscode/src/: apply.rs  context.rs  extensions.rs  lib.rs  main.rs  settings.rs  state.rs
crates/dotfiles-sync-vscode/src/app/: apply.rs  mod.rs  planner.rs  runtime.rs
crates/dotfiles-sync-vscode/src/domain/: mod.rs  model.rs  settings.rs  state.rs
crates/dotfiles-sync-vscode/src/infra/: cli.rs  collections.rs  context.rs  enablement_db.rs  extension_manifest.rs  extensions.rs  json.rs  mod.rs  paths.rs  profile_registry.rs
docs/: architecture-reset.md  architecture.md  commands.md  git-branch-strategy.md  homebrew-policy.md  reconciled-surfaces.md  secrets-local.md  tool-catalog.md  vscode.md
nix/: common.nix  env.nix  flake.nix  home-manager.nix  nix-darwin.nix
scripts/: agent-notifications-update  apply.sh  atalie-tar  atalie-tar.sh  bootstrap.sh  codex-slack-notification  codex-slack-update  doctor.sh  dotfiles.sh  export-clean.sh  gc.sh  list-tools.sh  matrix-tools.sh  sync.sh  update.sh  vscode-instances.sh  vscode.sh  (+1 more)
scripts/sync-adapters/vscode-rs/: Cargo.toml  build.sh
scripts/sync-adapters/vscode-rs/src/: apply.rs  cli.rs  context.rs  db.rs  enablement_db.rs  extension_manifest.rs  main.rs  planner.rs  profile_registry.rs
(+498 files in other folders)
