[package]
name = "dotfiles-sync-vscode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dotfiles-sync-vscode"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dotfiles-core = { path = "../dotfiles-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
