[package]
name = "dotfiles-sync-vscode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dotfiles-sync-vscode"
path = "src/main.rs"

[[bin]]
name = "dotfiles"
path = "src/bin/dotfiles.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
